add select__option rule